[gd_scene format=3 uid="uid://b821myv7hqira"]

[ext_resource type="Script" uid="uid://5kew2vksj747" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://buukgi0et88kj" path="res://scripts/center_line.gd" id="3_jyhfs"]
[ext_resource type="AudioStream" uid="uid://d3ac0w2jwejp5" path="res://sounds/bounce.wav" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://ythwa7lju0yj" path="res://sounds/goal.wav" id="5_tefeu"]
[ext_resource type="AudioStream" uid="uid://cq8m7px2omjnn" path="res://sounds/game_over.wav" id="6_o6xl0"]
[ext_resource type="Script" uid="uid://b6twgfn5wo61h" path="res://scripts/hud.gd" id="6_tefeu"]

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_tefeu"]
font_size = 64

[node name="Main" type="Node" unique_id=1207804753]
script = ExtResource("1_0wfyh")

[node name="CenterLine" type="Line2D" parent="." unique_id=1513979780]
position = Vector2(980, 0)
points = PackedVector2Array(0, 0, 0, 1080)
width = 5.0
default_color = Color(1, 1, 1, 0)
script = ExtResource("3_jyhfs")

[node name="HUD" type="CanvasLayer" parent="." unique_id=324994146]
script = ExtResource("6_tefeu")

[node name="InfoLeft" type="Label" parent="HUD" unique_id=1212225381]
offset_left = 460.0
offset_top = 2.0
offset_right = 723.0
offset_bottom = 90.0
text = "5"
label_settings = SubResource("LabelSettings_tbgi4")

[node name="InfoRight" type="Label" parent="HUD" unique_id=314673042]
offset_left = 1414.0
offset_top = 1.0
offset_right = 1688.0
offset_bottom = 95.0
text = "6"
label_settings = SubResource("LabelSettings_tefeu")

[node name="RestartButton" type="Button" parent="HUD" unique_id=2135032652]
offset_left = 826.0
offset_top = 345.0
offset_right = 1139.0
offset_bottom = 435.0
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="PlayerLeft" type="ColorRect" parent="." unique_id=306217227]
offset_left = 50.0
offset_top = 490.0
offset_right = 80.0
offset_bottom = 640.0

[node name="PlayerRight" type="ColorRect" parent="." unique_id=632470124]
offset_left = 1840.0
offset_top = 490.0
offset_right = 1870.0
offset_bottom = 640.0

[node name="Ball" type="ColorRect" parent="." unique_id=804545269]
offset_left = 971.0
offset_top = 553.0
offset_right = 991.0
offset_bottom = 573.0

[node name="RoundStartTimer" type="Timer" parent="." unique_id=345171795]
wait_time = 2.0
one_shot = true

[node name="RoundEndTimer" type="Timer" parent="." unique_id=1644078320]
one_shot = true

[node name="BounceSound" type="AudioStreamPlayer" parent="." unique_id=1023836621]
stream = ExtResource("4_jyhfs")

[node name="GoalSound" type="AudioStreamPlayer" parent="." unique_id=157339350]
stream = ExtResource("5_tefeu")

[node name="GameOverSound" type="AudioStreamPlayer" parent="." unique_id=93201839]
stream = ExtResource("6_o6xl0")

[connection signal="pressed" from="HUD/RestartButton" to="." method="_reset"]
[connection signal="timeout" from="RoundStartTimer" to="." method="_on_round_start_timer_timeout"]
[connection signal="timeout" from="RoundEndTimer" to="." method="_start_round"]
